--- a/views/index/about.handlebars
+++ b/views/index/about.handlebars
@@ -1,3 +1,4 @@
 <h1>About</h1>
 <p>Version 2.0.0</p>
-<p>CloneBank is a web application to help you working on the final year project</p>
+<p>BankClone is a web application to help you working on the final year project.</p>
+<p>Aims:To facilitate project management responsibilities carried out by RMCT students, Internship students, final year project students (FYP), Deans, HR, Head of schools (HOS), Academic leaders(AL), FYP supervisors, FYP second markers, project administrators (FYP), project managers (FYP) and database administrator (DBA).</p>
