--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,4 +1,4 @@
-<h1>Welcome {{user.firstName}}</h1>
+<h1>Welcome, {{user.firstName}}</h1>
 <h4>Your Ideas</h4>
 {{#if stories}}
   <table class="striped">
@@ -29,5 +29,5 @@
     </tbody>
   </table>
 {{else}}
-  <p>You have not created any ideas yet</p>
+  <p>You have not created any ideas yet, start thinking and click the red button in the right side bottom corner!</p>
 {{/if}}
