--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,4 +1,7 @@
 <h1>Welcome dear!</h1>
-<p>Welcome to CloneBank v.2.0</p>
+<p>Welcome back to BankClone v.2.0</p>
 <p>Post your FYP ideas in private or you can share it with other people in public, completely help you do your Final Year Project.</p>
+<p>It's your reliable plates to share or private write your ideas.</p>
+<p>Ps. No worries, it's free.</p>
+
 <a class="btn red darken-1" href="/auth/google"><i class="fa fa-google left"></i> Login With Google</a>
