--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">CloneBank</h5>
+        <h5 class="white-text">BankClone</h5>
         <p class="grey-text text-lighten-4">Keep working on your FYP, find the ideas here because FYP is fun!</p>
+        <p class="grey-text text-lighten-4">Created by: Ketibansapi (in 2 days)</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
@@ -16,8 +17,8 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2018 CloneBank
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      © 2018 BankClone
+      <a class="grey-text text-lighten-4 right" href="#!">Any updates, may figured out later!</a>
     </div>
   </div>
 </footer>
